class Altair
{
private:
    /* data */
public:
    Altair(/* args */) {}
    ~Altair() {}
};