class Artemis
{
private:
    /* data */
public:
    Artemis(/* args */) {}
    ~Artemis() {}
};