class BombUp
{
private:
    /* data */
public:
    BombUp(/* args */) {}
    ~BombUp() {}
};