class Buggler
{
private:
    /* data */
public:
    Buggler(/* args */) {}
    ~Buggler() {}
};