class Calavera
{
private:
    /* data */
public:
    Calavera(/* args */) {}
    ~Calavera() {}
};