class Casilla
{
private:
    /* data */
public:
    Casilla(/* args */) {}
    ~Casilla() {}
};