class Corazon
{
private:
    /* data */
public:
    Corazon(/* args */) {}
    ~Corazon() {}
};