class DoctorEin
{
private:
    /* data */
public:
    DoctorEin(/* args */) {}
    ~DoctorEin() {}
};