class FireUp
{
private:
    /* data */
public:
    FireUp(/* args */) {}
    ~FireUp() {}
};