class Geta
{
private:
    /* data */
public:
    Geta(/* args */) {}
    ~Geta() {}
};