class Item
{
private:
    /* data */
public:
    Item(/* args */) {}
    ~Item() {}
};