class Lilith
{
private:
    /* data */
public:
    Lilith(/* args */) {}
    ~Lilith() {}
};