class LineBomb
{
private:
    /* data */
public:
    LineBomb(/* args */) {}
    ~LineBomb() {}
};