class Max
{
private:
    /* data */
public:
    Max(/* args */) {}
    ~Max() {}
};