class Mikki
{
private:
    /* data */
public:
    Mikki(/* args */) {}
    ~Mikki() {}
};