class Minas
{
private:
    /* data */
public:
    Minas(/* args */) {}
    ~Minas() {}
};