class Mujoe
{
private:
    /* data */
public:
    Mujoe(/* args */) {}
    ~Mujoe() {}
};