class Negativo
{
private:
    /* data */
public:
    Negativo(/* args */) {}
    ~Negativo() {}
};