class Nitros
{
private:
    /* data */
public:
    Nitros(/* args */) {}
    ~Nitros() {}
};