class Orion
{
private:
    /* data */
public:
    Orion(/* args */) {}
    ~Orion() {}
};