class Patines
{
private:
    /* data */
public:
    Patines(/* args */) {}
    ~Patines() {}
};