class Poder
{
private:
    /* data */
public:
    Poder(/* args */) {}
    ~Poder() {}
};