class Pommy
{
private:
    /* data */
public:
    Pommy(/* args */) {}
    ~Pommy() {}
};