class Positivo
{
private:
    /* data */
public:
    Positivo(/* args */) {}
    ~Positivo() {}
};