class Puerta
{
private:
    /* data */
public:
    Puerta(/* args */) {}
    ~Puerta() {}
};