class Regulus
{
private:
    /* data */
public:
    Regulus(/* args */) {}
    ~Regulus() {}
};