class Rukifelth
{
private:
    /* data */
public:
    Rukifelth(/* args */) {}
    ~Rukifelth() {}
};