class Sirius
{
private:
    /* data */
public:
    Sirius(/* args */) {}
    ~Sirius() {}
};