class SuperBomb
{
private:
    /* data */
public:
    SuperBomb(/* args */) {}
    ~SuperBomb() {}
};