class Tablero
{
private:
    /* data */
public:
    Tablero(/* args */) {}
    ~Tablero() {}
};